# note-growth-autopublisher

./: .gitignore  CODEX.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  editorial-cycle.yml
config/: example.yml
data/: sample_metrics.csv
docs/: architecture.md  research-notes.md  setup.md
src/note_growth/: __init__.py  analyzer.py  cli.py  collector.py  config.py  core.py  io.py  metrics.py  models.py  publisher.py  writer.py
tests/: test_collector.py  test_core.py  test_metrics.py  test_publisher.py  test_writer.py
workflow-templates/: editorial-cycle.yml
