[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "note-growth-autopublisher"
version = "0.1.0"
description = "Research-to-draft automation for original note.com monetization articles."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI Development Agent" }]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "feedparser>=6.0.11",
  "markdownify>=0.13.1",
  "python-slugify>=8.0.4",
  "PyYAML>=6.0.2",
  "rapidfuzz>=3.9.6",
  "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.8",
]

[project.scripts]
note-growth = "note_growth.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
